Paints V3 (API) (#217)
* Paints V3 (API)

* remove deprecation notes so lint doesnt fail

* update gradient-local fields
